--- a/assets/site.css
+++ b/assets/site.css
@@ -2,7 +2,7 @@ body {
     background-color: white;
 }
 .right{
-    background-color: green;
+    background-color: limegreen
 }
 .wrong {
     background-color: yellow;
